tests/errors/hll_use_after_move.err.expected
error: at 8:11: [INIT-UseAfterMove] In function 'f': variable 'x' is used after move
   |
 8 |   let z = x;
   |           ^
